fixed gallery alignment issue and changed some text

--- a/_sass/_includes/_gallery.scss
+++ b/_sass/_includes/_gallery.scss
@@ -61,6 +61,10 @@
 		display: none;
 	}
 
+	.owl-carousel .owl-item img {
+		margin: auto;
+	}
+
 	.owl-dots {
 		margin-top: 20px;
 		text-align: center;
